fixed text-align for the table headers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,7 @@
 #tableCard {
     margin-bottom: 1em;
 }
+
+thead {
+    text-align: center;
+}
